--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -25,9 +25,9 @@ jobs:
       run: sudo xcode-select -s '/Applications/Xcode_12.5.app/Contents/Developer'
     - name: Run fastlane certificate_adhoc
       env:
-        GITHUB_ACCOUNT: ${{ secrets.GITHUB_USERNAME }}
-        GITHUB_PERSONAL_ACCESS_TOKEN: ${{ secrets.GITHUB_PERSONAL_ACCESS_TOKEN }}
-        APPLE_ID: ${{ secrets.APPLE_ACCOUNT }}
+        GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
+        GITHUB_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+        APPLE_ID: ${{ secrets.APPLE_ID }}
       run: |
         fastlane certificate_adhoc
     - name: Run fastlane adhoc
