--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -16,13 +16,13 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: macos-latest
+    runs-on: macos-11
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@v1
     - name: Select Xcode
-      run: sudo xcode-select -s '/Applications/Xcode_12.5.app/Contents/Developer'
+      run: sudo xcode-select -s '/Applications/Xcode_12.5.1.app/Contents/Developer'
     - name: Run fastlane certificate_adhoc
       env:
         GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
