--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -27,6 +27,7 @@ jobs:
       env:
         GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
         GITHUB_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+        MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
         APPLE_ID: ${{ secrets.APPLE_ID }}
       run: |
         fastlane certificate_adhoc
