--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -40,7 +40,34 @@ jobs:
       run: echo "$SSH_KEY" > .ssh/id_ed25519 && chmod 600 .ssh/id_ed25519
       env:
         SSH_KEY: ${{ secrets.SSH_KEY }}
-    - name: copy ipa and manifest files
-      run: scp -i .ssh/id_ed25519 Cider.ipa manifest.plist $SCP_DESTINATION
+    - name: Public IP
+      id: ip
+      uses: haythem/public-ip@v1.2
+    - name: Deploy
       env:
+        ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        SECURITY_GROUP: ${{ secrets.AWS_SECURITY_GROUP_ID }}
         SCP_DESTINATION: ${{ secrets.SCP_DESTINATION }}
+      run: |
+        # https://github.com/haythem/public-ip
+        IP_ADDRESS=`echo ${{ steps.ip.outputs.ipv4 }}`
+
+        # AWS CLIをインストール
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install
+        aws --version
+
+        # AWS CLIに設定をする
+        printf "${ACCESS_KEY}\n${SECRET_ACCESS_KEY}\nap-northeast-1\njson\n" | aws configure --profile eyemovic-dev
+        aws configure get aws_access_key_id --profile cider-adhoc-deploy
+
+        # SSHポートを開放する
+        aws --profile cider-adhoc-deploy ec2 authorize-security-group-ingress --group-id ${SECURITY_GROUP} --protocol tcp --port 22 --cidr "$IP_ADDRESS"/32
+
+        # SCPでファイルをコピー
+        scp -i .ssh/id_ed25519 Cider.ipa manifest.plist $SCP_DESTINATION
+
+        # SSHのポートを閉じる
+        aws --profile cider-adhoc-deploy ec2 revoke-security-group-ingress --group-id ${SECURITY_GROUP} --protocol tcp --port 22 --cidr "$IP_ADDRESS"/32
