--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -54,9 +54,8 @@ jobs:
         IP_ADDRESS=`echo ${{ steps.ip.outputs.ipv4 }}`
 
         # AWS CLIをインストール
-        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install
+        curl "https://awscli.amazonaws.com/AWSCLIV2.pkg" -o "AWSCLIV2.pkg"
+        sudo installer -pkg AWSCLIV2.pkg -target /
         aws --version
 
         # AWS CLIに設定をする
