--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -1,24 +1,14 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Ad Hoc Deployment
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: macos-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@v1
     - name: Select Xcode
@@ -40,13 +30,18 @@ jobs:
       run: echo "$SSH_KEY" > .ssh/id_ed25519 && chmod 600 .ssh/id_ed25519
       env:
         SSH_KEY: ${{ secrets.SSH_KEY }}
+
+  setup-aws-cli:
+    runs-on: macos-latest
+    steps:
     - name: Public IP
       id: ip
       uses: haythem/public-ip@v1.2
-    - name: Deploy
+    - name: Setup AWS CLI
       env:
         ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
         SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
         SECURITY_GROUP: ${{ secrets.AWS_SECURITY_GROUP_ID }}
         SCP_DESTINATION: ${{ secrets.SCP_DESTINATION }}
       run: |
@@ -59,12 +54,24 @@ jobs:
         aws --version
 
         # AWS CLIに設定をする
-        printf "${ACCESS_KEY}\n${SECRET_ACCESS_KEY}\nap-northeast-1\njson\n" | aws configure --profile eyemovic-dev
+        printf "${ACCESS_KEY}\n${SECRET_ACCESS_KEY}\n${AWS_REGION}\njson\n" | aws configure --profile cider-adhoc-deploy
         aws configure get aws_access_key_id --profile cider-adhoc-deploy
 
         # SSHポートを開放する
         aws --profile cider-adhoc-deploy ec2 authorize-security-group-ingress --group-id ${SECURITY_GROUP} --protocol tcp --port 22 --cidr "$IP_ADDRESS"/32
 
+  deploy:
+    runs-on: macos-latest
+    needs: [build, setup-aws-cli]
+    steps:
+    - name: Public IP
+      id: ip
+      uses: haythem/public-ip@v1.2
+    - name: Deploy
+      env:
+        SECURITY_GROUP: ${{ secrets.AWS_SECURITY_GROUP_ID }}
+        SCP_DESTINATION: ${{ secrets.SCP_DESTINATION }}
+      run: |
         # SCPでファイルをコピー
         scp -i .ssh/id_ed25519 Cider.ipa manifest.plist $SCP_DESTINATION
 
