--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Public IP
       id: ip
       uses: haythem/public-ip@v1.2
-    - name: open port
+    - name: open port and deploy
       env:
         SECURITY_GROUP: ${{ secrets.AWS_SECURITY_GROUP_ID }}
         SCP_DESTINATION: ${{ secrets.SCP_DESTINATION }}
@@ -59,12 +59,10 @@ jobs:
         
         # SSHポートを開放する
         aws --profile cider-adhoc-deploy ec2 authorize-security-group-ingress --group-id ${SECURITY_GROUP} --protocol tcp --port 22 --cidr "$IP_ADDRESS"/32
-    - name: deploy
-      env:
-        SCP_DESTINATION: ${{ secrets.SCP_DESTINATION }}
-      run: |
+        sleep 5
+        
         # SCPでファイルをコピー
-        scp -i .ssh/id_ed25519 -oStrictHostKeyChecking=no Cider.ipa manifest.plist $SCP_DESTINATION
+        scp -v -i .ssh/id_ed25519 -oStrictHostKeyChecking=no Cider.ipa manifest.plist $SCP_DESTINATION
     - name: close port
       env:
         SECURITY_GROUP: ${{ secrets.AWS_SECURITY_GROUP_ID }}
