--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -13,15 +13,13 @@ jobs:
     - uses: actions/checkout@v1
     - name: Select Xcode
       run: sudo xcode-select -s '/Applications/Xcode_12.4.app/Contents/Developer'
-    - name: Run fastlane certificate_adhoc
+    - name: Run fastlane adhoc
       env:
         GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
         GITHUB_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+        GITHUB_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
         MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
         APPLE_ID: ${{ secrets.APPLE_ID }}
-      run: |
-        fastlane certificate_adhoc
-    - name: Run fastlane adhoc
       run: |
         fastlane adhoc
     - name: Setup AWS CLI
