--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -68,7 +68,7 @@ jobs:
         while true; do aws ec2 --profile cider-adhoc-deploy describe-security-groups --group-ids ${SECURITY_GROUP} | grep -q "\"CidrIp\": \"$IP_ADDRESS/32\"" && break; sleep 5; done
         
         # SCPでファイルをコピー
-        scp -i .ssh/id_ed25519 -oStrictHostKeyChecking=no Cider.ipa manifest.plist $SCP_DESTINATION
+        scp -4 -i .ssh/id_ed25519 -oStrictHostKeyChecking=no Cider.ipa manifest.plist $SCP_DESTINATION
       timeout-minutes: 5
     - name: close port
       env:
