--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -47,4 +47,4 @@ jobs:
       env: 
         S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
       run: |
-        s3 cp . s3://${S3_BUCKET_NAME} --exclude "*" --include "Cider.ipa" --include "manifest.plist" --recursive
+        aws s3 cp . s3://${S3_BUCKET_NAME} --exclude "*" --include "Cider.ipa" --include "manifest.plist" --recursive
